--- a/assets/style.css
+++ b/assets/style.css
@@ -110,8 +110,8 @@ nav a {
 }
 .nav-pills .nav-link {
 	color: #000;
-	background-color: #BEB45A;
 }
+
 .item-column {
 	position: relative;
 	margin-bottom: 0 !important;
@@ -251,6 +251,14 @@ form textarea {
 input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
+}
+
+footer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 30px 100px;
+	font-size: 10px;
 }
 
 /*** MEDIA QUERIES ***/
