--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,7 @@ nav a {
 
 .social-link img {
 	width: 20px;
+	height: auto;
 }
 
 #about {
@@ -71,6 +72,7 @@ nav a {
 
 .picture img {
 	width: 100%;
+	height: auto;
 }
 
 #about-me {
