--- a/assets/style.css
+++ b/assets/style.css
@@ -282,6 +282,9 @@ footer {
 	#about-me h2, #about-me p {
 		width: 100%;
 	}
+	.quote figure {
+		margin: 7rem 0 1rem;
+	}
 }
 
 @media all and (max-width: 1000px) {
@@ -305,6 +308,11 @@ footer {
 		text-align: center;
 		margin-top: 1em;
 	}
+
+	.quote figure {
+		margin: 7rem 0 1rem;
+	}
+
 	#services .container {
 		flex-direction: column;
 	}
